--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <h2>Welcome to My website!</h2>
             <p>Student | Web Developing</p>
-            <a href="https://discord.gg/n5RFWff5ah" class="btn">Discord</a>
+            <a href="contact/contacts.html" class="btn">About me</a>
         </div>
     </section>
 
