--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
     <div class="container">
         <h1>404 - Page Not Found</h1>
         <p>Oops! The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-        <a href="/">Go to Homepage</a>
+        <a href="https://amajks.github.io/home/">Go to Homepage</a>
     </div>
 </body>
 </html>
