--- a/socials/socials.html
+++ b/socials/socials.html
@@ -19,10 +19,10 @@
             </div>
 
             <div class="social-links">
-                <a href="#"><img src="images/youtube-icon.png" alt="YouTube"></a>
-                <a href="#"><img src="images/twitter-icon.png" alt="Twitter"></a>
-                <a href="#"><img src="images/roblox-icon.png" alt="Roblox"></a>
-                <a href="#"><img src="images/twitch-icon.png" alt="Twitch"></a>
+                <a href="https://www.youtube.com/channel/UCO_SEAQy6dltIGO9eEH8c2w"><img src="images/youtube-icon.png" alt="YouTube"></a>
+                <a href="https://twitter.com/amajk_"><img src="images/twitter-icon.png" alt="Twitter"></a>
+                <a href="https://www.roblox.com/users/534981487/profile"><img src="images/roblox-icon.png" alt="Roblox"></a>
+                <a href="https://www.twitch.tv/amajk_"><img src="images/twitch-icon.png" alt="Twitch"></a>
             </div>
         </main>
     </div>
