--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section id="about">
         <div class="container">
-            <h2>About Us</h2>
+            <h2>About Me</h2>
             <p>Hello, I'm amajk. I'm a roblox game developer and i have decided to make my first ever website! I'm trying to learn web developing for my upcoming projects and get to learn other coding languages more.</p>
         </div>
     </section>
