--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="hero">
         <div class="container">
             <h2>Welcome to My website!</h2>
-            <p>Student | Web Developing</p>
+            <p>Student | Web Developing | Gaming</p>
             <a href="contact/contacts.html" class="btn">About me</a>
         </div>
     </section>
