--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hello, I'm amajk. I'm a roblox game developer and i have decided to make my first ever website! I'm trying to learn web developing for my upcoming projects and get to learn other coding languages more.</p>
+            <p>Hello! I'm Amajk. I'm diving into the world of web development to equip myself with the skills necessary for future business ventures and projects. As a student, I'm currently learning Python for a few weeks now, exploring its capabilities and potential applications.</p>
         </div>
     </section>
 
