--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <section id="hero">
         <div class="container">
             <h2>Welcome to My website!</h2>
-            <p>Student | Web Developing | Roblox Game Developer</p>
-            <a href="https://discord.gg/8s7eK9eZPY" class="btn">My Roblox's Discord</a>
+            <p>Student | HTML, CSS, JS | Python</p>
+            <a href="https://discord.gg/8s7eK9eZPY" class="btn">About me</a>
         </div>
     </section>
 
