--- a/404.html
+++ b/404.html
@@ -1,49 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 4em;
-            margin-bottom: 20px;
-            color: #555;
-        }
-
-        p {
-            font-size: 1.2em;
-            margin-bottom: 30px;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Amajk's Website | Page Not Found</title>
+<style>
+  /* Global Styles */
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  .container {
+    text-align: center;
+  }
+  h1 {
+    font-size: 8rem;
+    margin-bottom: 0;
+    color: #e74c3c;
+  }
+  h2 {
+    font-size: 3rem;
+    margin-top: 0;
+    color: #333;
+  }
+  p {
+    font-size: 1.5rem;
+    color: #666;
+  }
+  a {
+    color: #fff;
+    text-decoration: none;
+    background-color: #3498db;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  a:hover {
+    background-color: #2980b9;
+  }
+  /* Custom Styles */
+  .astronaut {
+    max-width: 300px;
+    margin: 0 auto 30px;
+    display: block;
+  }
+  .moon {
+    width: 80px;
+    position: relative;
+    animation: moveMoon 3s linear infinite alternate;
+  }
+  @keyframes moveMoon {
+    0% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(10px);
+    }
+  }
+</style>
 </head>
 <body>
-    <div class="container">
-        <h1>404 - Page Not Found</h1>
-        <p>Oops! The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-        <a href="https://amajks.github.io/home/">Go to Homepage</a>
-    </div>
+<div class="container">
+  <img src="https://assets.codepen.io/1538477/astronaut.svg" alt="Astronaut" class="astronaut">
+  <h1>404</h1>
+  <h2>Oops! Page not found</h2>
+  <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
+  <a href="/">Go to Home</a>
+  <div class="moon">
+    <img src="https://assets.codepen.io/1538477/moon.svg" alt="Moon">
+  </div>
+</div>
 </body>
 </html>
