--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="socials/socials.html">Socials</a></li>
-                    <li><a href="notavailable">Services</a></li>
+                    <li><a href="skills/index.html">Skills</a></li>
                     <li><a href="contact/contacts.html">Contact</a></li>
                 </ul>
             </nav>
