--- a/404.html
+++ b/404.html
@@ -67,13 +67,13 @@
 </head>
 <body>
 <div class="container">
-  <img src="https://assets.codepen.io/1538477/astronaut.svg" alt="Astronaut" class="astronaut">
+  <img src="assets/astronaut.png" alt="Astronaut" class="astronaut">
   <h1>404</h1>
   <h2>Oops! Page not found</h2>
   <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
   <a href="/">Go to Home</a>
   <div class="moon">
-    <img src="https://assets.codepen.io/1538477/moon.svg" alt="Moon">
+    <img src="assets/moon.png" alt="Moon">
   </div>
 </div>
 </body>
