--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <h2>Welcome to My website!</h2>
             <p>Student | HTML, CSS, JS | Python</p>
-            <a href="https://discord.gg/8s7eK9eZPY" class="btn">About me</a>
+            <a href="contact/contacts.html" class="btn">About me</a>
         </div>
     </section>
 
