--- a/changelog/index.html
+++ b/changelog/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Change Log</title>
+    <title>Amajk's Website | Change Log</title>
     <link rel="stylesheet" href="changelog/style.css">
 </head>
 <body>
