--- a/changelog/index.html
+++ b/changelog/index.html
@@ -27,22 +27,23 @@
                     <span class="date">February 25, 2024</span>
                 </div>
                 <ul class="changes">
-                    <li>Added support for feature Z</li>
-                    <li>Updated dependencies</li>
+                    <li>+ Added Changelog Page</li>
+                    <li>+ Updated github</li>
                 </ul>
             </li>
             <li class="change-item">
                 <div class="version-date">
                     <span class="version">1.0.0</span>
-                    <span class="date">January 10, 2024</span>
+                    <span class="date">March 18, 2024</span>
                 </div>
                 <ul class="changes">
-                    <li>Initial release</li>
+                    <li>+ Updated title</li>
+                    <li>+ Added 404 Error Page</li>
                 </ul>
             </li>
         </ul>
     </div>
 
-    <script src="script.js"></script>
+    <script src="changelog/script.js"></script>
 </body>
 </html>
