--- a/404.html
+++ b/404.html
@@ -1,80 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Amajk's Website | Page Not Found</title>
-<style>
-  /* Global Styles */
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #f0f0f0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  .container {
-    text-align: center;
-  }
-  h1 {
-    font-size: 8rem;
-    margin-bottom: 0;
-    color: #e74c3c;
-  }
-  h2 {
-    font-size: 3rem;
-    margin-top: 0;
-    color: #333;
-  }
-  p {
-    font-size: 1.5rem;
-    color: #666;
-  }
-  a {
-    color: #fff;
-    text-decoration: none;
-    background-color: #3498db;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-  a:hover {
-    background-color: #2980b9;
-  }
-  /* Custom Styles */
-  .astronaut {
-    max-width: 300px;
-    margin: 0 auto 30px;
-    display: block;
-  }
-  .moon {
-    width: 80px;
-    position: relative;
-    animation: moveMoon 3s linear infinite alternate;
-  }
-  @keyframes moveMoon {
-    0% {
-      transform: translateY(-10px);
-    }
-    100% {
-      transform: translateY(10px);
-    }
-  }
-</style>
+    <meta charset="utf-8">
+    <title>Amajk | Error 404</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="JoashPereira">
+    <link rel="stylesheet" href="404.css" />
 </head>
+
 <body>
-<div class="container">
-  <img src="assets/astronaut.png" alt="Astronaut" class="astronaut">
-  <h1>404</h1>
-  <h2>Oops! Page not found</h2>
-  <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-  <a href="/">Go to Home</a>
-  <div class="moon">
-    <img src="assets/moon.png" alt="Moon">
-  </div>
-</div>
+    <div id="container">
+        <div class="error-code">404</div>
+        <br/><br/>
+        <span class="info">Page not found</span>
+    </div>
 </body>
+
 </html>
