--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
     <link href="../assets/style/style.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <script src="assets/js/script.js"></script>
-    <title>ztve's contact info</title>
+    <title>Amajk | Contact</title>
   </head>
   <body>
 
@@ -14,7 +14,7 @@
         
         <p class="texth">Contact me</p>
         <p class="text">
-          <i class="fab fa-discord"></i> ztve#0001 | <i class="fas fa-at"></i> <a class="link" href="mailto:smileyy.ml@gmail.com">smileyy.ml@gmail.com</a>
+          <i class="fab fa-discord"></i> @amajk | <i class="fas fa-at"></i> <a class="link" href="mailto:n/a">n/a</a>
         </p>
 
 
