--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="assets/style/style.css" rel="stylesheet" type="text/css"/>
        <script src="assets/js/script.js"></script>
     
-    <link rel="icon" href="https://ztve.github.io/embed.png">
+    <link rel="icon" href="https://amajks.github.io/amajk_logo_circle.png">
     <script src="css/script.js"></script>
 
     <meta property="og:type" content="website">
