--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         
         <p class="texth">Hi, I'm Ali.</p>
         <p class="text">
-        Hi, I'm a 16-year-old developer who loves coding and gaming! I mainly work with HTML and Python,<br>
+        Hi, I'm a developer who loves coding and gaming. I mainly work with HTML and Python,<br>
             but I also know some Java and JavaScript.<br>
             When I'm not coding, I enjoy playing BeamNG and Minecraft. <br>
             I love solving problems and coming up with creative solutions.<br>
-            Always ready for new challenges and fun projects!<br> 
+            Always ready for new challenges and fun projects<br> 
 
         My main projects right now:<br>
         <a class="link" href="https://discord.gg/t2HDPBFNdf">Amajk's Mods</a>, a BeamNG server.<br>
