--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="css/script.js"></script>
 
     <meta property="og:type" content="website">
-    <meta content="ztve" property="og:title">
-    <meta content="very cool gamer." property="og:description">
+    <meta content="Amajk" property="og:title">
+    <meta content="Computer science student with no life" property="og:description">
     <meta content="#121212" data-react-helmet="true" name="theme-color">
 
     <title>amajk's website</title>
