--- a/shop/index.html
+++ b/shop/index.html
@@ -23,11 +23,11 @@
 
     <div class="store">
         <div class="product" onclick="showPopup('Product 1', 'Description of Product 1', 'https://example.com/product1')">
-            <img src="product.jpg" alt="Product 1">
+            <img src="https://amajks.github.io/shop/products/product.jpg" alt="Product 1">
             <p class="name">Product 1</p>
             <p class="price">$10.00</p>
         </div>
-        <div class="product" onclick="showPopup('Product 2', 'Description of Product 2', 'https://example.com/product2')">
+        <div class="https://amajks.github.io/shop/products/product.jpg" onclick="showPopup('Product 2', 'Description of Product 2', 'https://example.com/product2')">
             <img src="product.jpg" alt="Product 2">
             <p class="name">Product 2</p>
             <p class="price">$15.00</p>
@@ -36,7 +36,7 @@
     </div>
 
     <footer>
-        <p>&copy; NOTE: This store is not ready yet!</p>
+        <p>&copy; 2024 Amajk, All rights reserved. NOTE: This store is not ready yet!</p>
     </footer>
 
     <div id="popup" class="popup">
