--- a/shop/index.html
+++ b/shop/index.html
@@ -9,9 +9,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="amajks.github.io">Home</a></li>
+            <li><a href="#">Discord</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
