--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         My main projects right now:<br>
         <a class="link" href="https://discord.gg/t2HDPBFNdf">Amajk's Mods</a>, a BeamNG server.<br>
-        <a class="link" href="https://discord.gg/UkZNB5gpAX">My Discord</a> |  <a class="link" href="contact">Contact</a> | <a class="link" href="https://twitter.com/amajk_">Twitter</a>
+        <a class="link" href="https://amajks.github.io/shop">My Shop</a> |  <a class="link" href="contact">Contact</a> | <a class="link" href="https://twitter.com/amajk_">Twitter</a>
         </p>
 
 
