--- a/shop/index.html
+++ b/shop/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="icon" href="https://amajks.github.io/amajk_logo_circle.png">
+
+    <meta property="og:type" content="website">
+    <meta content="Amajk" property="og:title">
+    <meta content="Computer science student with no life" property="og:description">
+    <meta content="#121212" data-react-helmet="true" name="theme-color">
     <title>amajk's store</title>
     <link rel="stylesheet" href="styles.css">
 </head>
