--- a/shop/index.html
+++ b/shop/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="https://amajks.github.io/amajk_logo_circle.png">
 
     <meta property="og:type" content="website">
-    <meta content="Amajk" property="og:title">
-    <meta content="Computer science student with no life" property="og:description">
+    <meta content="Amajk's Store" property="og:title">
+    <meta content="Mods, Games & More!" property="og:description">
     <meta content="#121212" data-react-helmet="true" name="theme-color">
     <title>amajk's store</title>
     <link rel="stylesheet" href="styles.css">
