--- a/shop/index.html
+++ b/shop/index.html
@@ -54,6 +54,6 @@
         </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="shop/scripts.js"></script>
 </body>
 </html>
