--- a/shop/index.html
+++ b/shop/index.html
@@ -33,10 +33,10 @@
             <p class="name">Product 1</p>
             <p class="price">$10.00</p>
         </div>
-        <div class="https://amajks.github.io/shop/products/product.jpg" onclick="showPopup('Product 2', 'Description of Product 2', 'https://example.com/product2')">
-            <img src="product.jpg" alt="Product 2">
-            <p class="name">Product 2</p>
-            <p class="price">$15.00</p>
+        <div class="product" onclick="showPopup('Product 1', 'Description of Product 1', 'https://example.com/product1')">
+            <img src="https://amajks.github.io/shop/products/product.jpg" alt="Product 1">
+            <p class="name">Product 1</p>
+            <p class="price">$10.00</p>
         </div>
         <!-- Add more products as needed -->
     </div>
