--- a/shop/index.html
+++ b/shop/index.html
@@ -28,15 +28,15 @@
     </header>
 
     <div class="store">
-        <div class="product" onclick="showPopup('Product 1', 'Description of Product 1', 'https://example.com/product1')">
+        <div class="product" onclick="showPopup('Product 1', 'Note: This is a test', 'https://example.com/product1')">
             <img src="https://amajks.github.io/shop/products/product.jpg" alt="Product 1">
             <p class="name">Product 1</p>
             <p class="price">$10.00</p>
         </div>
-        <div class="product" onclick="showPopup('Product 1', 'Description of Product 1', 'https://example.com/product1')">
-            <img src="https://amajks.github.io/shop/products/product.jpg" alt="Product 1">
-            <p class="name">Product 1</p>
-            <p class="price">$10.00</p>
+        <div class="product" onclick="showPopup('Product 2', 'Note: This is a test', 'https://example.com/product2')">
+            <img src="https://amajks.github.io/shop/products/product.jpg" alt="Product 2">
+            <p class="name">Product 2</p>
+            <p class="price">$12.00</p>
         </div>
         <!-- Add more products as needed -->
     </div>
