--- a/shop/index.html
+++ b/shop/index.html
@@ -3,21 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="icon" href="https://amajks.github.io/amajk_logo_circle.png">
-
-    <meta property="og:type" content="website">
-    <meta content="Amajk's Store" property="og:title">
-    <meta content="Mods, Games & More!" property="og:description">
-    <meta content="#121212" data-react-helmet="true" name="theme-color">
-    <title>amajk's store</title>
+    <title>Store</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="amajks.github.io">Home</a></li>
-            <li><a href="#">Discord</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
@@ -28,21 +22,21 @@
     </header>
 
     <div class="store">
-        <div class="product" onclick="showPopup('Product 1', 'Note: This is a test', 'https://example.com/product1')">
-            <img src="https://amajks.github.io/shop/products/product.jpg" alt="Product 1">
+        <div class="product" onclick="showPopup('Product 1', 'Description of Product 1', 'https://example.com/product1')">
+            <img src="products/product1.jpg" alt="Product 1">
             <p class="name">Product 1</p>
             <p class="price">$10.00</p>
         </div>
-        <div class="product" onclick="showPopup('Product 2', 'Note: This is a test', 'https://example.com/product2')">
-            <img src="https://amajks.github.io/shop/products/product.jpg" alt="Product 2">
+        <div class="product" onclick="showPopup('Product 2', 'Description of Product 2', 'https://example.com/product2')">
+            <img src="products/product2.jpg" alt="Product 2">
             <p class="name">Product 2</p>
-            <p class="price">$12.00</p>
+            <p class="price">$15.00</p>
         </div>
         <!-- Add more products as needed -->
     </div>
 
     <footer>
-        <p>&copy; 2024 Amajk, All rights reserved. NOTE: This store is not ready yet!</p>
+        <p>&copy; 2024 Your Store. All rights reserved.</p>
     </footer>
 
     <div id="popup" class="popup">
