--- a/shop/index.html
+++ b/shop/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://amajks.github.io/shop/styles.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="https://amajks.github.io/">Home</a></li>
+            <li><a href="#">Discord</a></li>
+            <li><a href="#">Instagram</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
@@ -23,12 +23,12 @@
 
     <div class="store">
         <div class="product" onclick="showPopup('Product 1', 'Description of Product 1', 'https://example.com/product1')">
-            <img src="products/product1.jpg" alt="Product 1">
+            <img src="shop/products/product1.jpg" alt="Product 1">
             <p class="name">Product 1</p>
             <p class="price">$10.00</p>
         </div>
         <div class="product" onclick="showPopup('Product 2', 'Description of Product 2', 'https://example.com/product2')">
-            <img src="products/product2.jpg" alt="Product 2">
+            <img src="shop/products/product2.jpg" alt="Product 2">
             <p class="name">Product 2</p>
             <p class="price">$15.00</p>
         </div>
@@ -48,6 +48,6 @@
         </div>
     </div>
 
-    <script src="shop/scripts.js"></script>
+    <script src="https://amajks.github.io/shop/scripts.js"></script>
 </body>
 </html>
