--- a/shop/index.html
+++ b/shop/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Store</title>
-    <link rel="stylesheet" href="amajks.github.io/styles.css">
+    <link rel="stylesheet" href="amajks.github.io/shop/styles.css">
 </head>
 <body>
     <nav>
