--- a/shop/index.html
+++ b/shop/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store</title>
+    <title>amajk Store</title>
     <link rel="stylesheet" href="amajks.github.io/shop/styles.css">
 </head>
 <body>
