--- a/shop/index.html
+++ b/shop/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>amajk Store</title>
-    <link rel="stylesheet" href="amajks.github.io/shop/styles.css">
+    <title>Store</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
@@ -27,12 +27,12 @@
         <h2>Games</h2>
         <div class="store">
             <div class="product" onclick="showPopup('Game 1', 'Description of Game 1', 'https://example.com/game1')">
-                <img src="amajks.github.io/shop/products/product.jpg" alt="Game 1">
+                <img src="game1.jpg" alt="Game 1">
                 <p class="name">Game 1</p>
                 <p class="price">$20.00</p>
             </div>
             <div class="product" onclick="showPopup('Game 2', 'Description of Game 2', 'https://example.com/game2')">
-                <img src="amajks.github.io/shop/products/product.jpg" alt="Game 2">
+                <img src="game2.jpg" alt="Game 2">
                 <p class="name">Game 2</p>
                 <p class="price">$25.00</p>
             </div>
@@ -44,12 +44,12 @@
         <h2>Mods</h2>
         <div class="store">
             <div class="product" onclick="showPopup('Mod 1', 'Description of Mod 1', 'https://example.com/mod1')">
-                <img src="amajks.github.io/shop/products/product.jpg" alt="Mod 1">
+                <img src="mod1.jpg" alt="Mod 1">
                 <p class="name">Mod 1</p>
                 <p class="price">$5.00</p>
             </div>
             <div class="product" onclick="showPopup('Mod 2', 'Description of Mod 2', 'https://example.com/mod2')">
-                <img src="amajks.github.io/shop/products/product.jpg" alt="Mod 2">
+                <img src="mod2.jpg" alt="Mod 2">
                 <p class="name">Mod 2</p>
                 <p class="price">$7.00</p>
             </div>
@@ -61,12 +61,12 @@
         <h2>Services</h2>
         <div class="store">
             <div class="product" onclick="showPopup('Service 1', 'Description of Service 1', 'https://example.com/service1')">
-                <img src="amajks.github.io/shop/products/product.jpg" alt="Service 1">
+                <img src="service1.jpg" alt="Service 1">
                 <p class="name">Service 1</p>
                 <p class="price">$50.00</p>
             </div>
             <div class="product" onclick="showPopup('Service 2', 'Description of Service 2', 'https://example.com/service2')">
-                <img src="amajks.github.io/shop/products/product.jpg" alt="Service 2">
+                <img src="service2.jpg" alt="Service 2">
                 <p class="name">Service 2</p>
                 <p class="price">$75.00</p>
             </div>
@@ -87,6 +87,6 @@
         </div>
     </div>
 
-    <script src="amajks.github.io/shop/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
