--- a/shop/index.html
+++ b/shop/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="shop/styles.css">
 </head>
 <body>
     <nav>
@@ -23,12 +23,12 @@
 
     <div class="store">
         <div class="product" onclick="showPopup('Product 1', 'Description of Product 1', 'https://example.com/product1')">
-            <img src="product1.jpg" alt="Product 1">
+            <img src="shop/products/product.jpg" alt="Product 1">
             <p class="name">Product 1</p>
             <p class="price">$10.00</p>
         </div>
         <div class="product" onclick="showPopup('Product 2', 'Description of Product 2', 'https://example.com/product2')">
-            <img src="product2.jpg" alt="Product 2">
+            <img src="shop/products/product.jpg" alt="Product 2">
             <p class="name">Product 2</p>
             <p class="price">$15.00</p>
         </div>
@@ -48,6 +48,6 @@
         </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="shop/scripts.js"></script>
 </body>
 </html>
