--- a/shop/index.html
+++ b/shop/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Store</title>
-    <link rel="stylesheet" href="shop/styles.css">
+    <link rel="stylesheet" href="amajks.github.io/shop/styles.css">
 </head>
 <body>
     <nav>
@@ -48,6 +48,6 @@
         </div>
     </div>
 
-    <script src="shop/scripts.js"></script>
+    <script src="amajks.github.io/shop/scripts.css"></script>
 </body>
 </html>
