--- a/shop/index.html
+++ b/shop/index.html
@@ -23,12 +23,12 @@
 
     <div class="store">
         <div class="product" onclick="showPopup('Product 1', 'Description of Product 1', 'https://example.com/product1')">
-            <img src="shop/products/product.jpg" alt="Product 1">
+            <img src="amajks.github.io/shop/products/product.jpg" alt="Product 1">
             <p class="name">Product 1</p>
             <p class="price">$10.00</p>
         </div>
         <div class="product" onclick="showPopup('Product 2', 'Description of Product 2', 'https://example.com/product2')">
-            <img src="shop/products/product.jpg" alt="Product 2">
+            <img src="amajks.github.io/shop/products/product.jpg" alt="Product 2">
             <p class="name">Product 2</p>
             <p class="price">$15.00</p>
         </div>
