--- a/shop/index.html
+++ b/shop/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store</title>
+    <title>Amajk's Store</title>
     <link rel="stylesheet" href="amajks.github.io/shop/styles.css">
 </head>
 <body>
@@ -36,7 +36,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Your Store. All rights reserved.</p>
+        <p>&copy; 2024 AmajkDEV. All rights reserved.</p>
     </footer>
 
     <div id="popup" class="popup">
