--- a/shop/index.html
+++ b/shop/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amajk's Store</title>
-    <link rel="stylesheet" href="amajks.github.io/shop/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="amajk.xyz">Home</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
@@ -23,12 +23,12 @@
 
     <div class="store">
         <div class="product" onclick="showPopup('Product 1', 'Description of Product 1', 'https://example.com/product1')">
-            <img src="amajks.github.io/shop/products/product.jpg" alt="Product 1">
+            <img src="amajk.xyz/shop/products/product.jpg" alt="Product 1">
             <p class="name">Product 1</p>
             <p class="price">$10.00</p>
         </div>
         <div class="product" onclick="showPopup('Product 2', 'Description of Product 2', 'https://example.com/product2')">
-            <img src="amajks.github.io/shop/products/product.jpg" alt="Product 2">
+            <img src="amajk.xyz/shop/products/product.jpg" alt="Product 2">
             <p class="name">Product 2</p>
             <p class="price">$15.00</p>
         </div>
@@ -36,7 +36,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 AmajkDEV. All rights reserved.</p>
+        <p>&copy; NOTE: This store is not ready yet!</p>
     </footer>
 
     <div id="popup" class="popup">
@@ -48,6 +48,6 @@
         </div>
     </div>
 
-    <script src="amajks.github.io/shop/scripts.css"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
