--- a/shop/index.html
+++ b/shop/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="amajk.xyz">Home</a></li>
+            <li><a href="amajks.github.io">Home</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
