--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             Always ready for new challenges and fun projects<br> 
 
         My main projects right now:<br>
-        <a class="link" href="https://discord.gg/t2HDPBFNdf">Amajk's Mods</a>, a BeamNG server.<br>
+        <a class="link" href="#">Secret</a>, #<br>
         <a class="link" href="https://amajks.github.io/shop">My Shop</a> |  <a class="link" href="contact">Contact</a> | <a class="link" href="https://twitter.com/amajk_">Twitter</a>
         </p>
 
