--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="Computer science student with no life" property="og:description">
     <meta content="#121212" data-react-helmet="true" name="theme-color">
 
-    <title>amajk's website</title>
+    <title>Amajk's website</title>
   </head>
   <body>
 
@@ -20,7 +20,7 @@
       
       <div class="main-panel">
         
-        <p class="texth">Hi, I'm Ali.</p>
+        <p class="texth">Hi, I'm Amajk.</p>
         <p class="text">
         Hi, I'm a developer who loves coding and gaming. I mainly work with HTML and Python,<br>
             but I also know some Java and JavaScript.<br>
